# tauri_app

./: .eslintrc.json  .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/commands/: mod.rs  staff.rs
src-tauri/src/database/: models.rs  operations.rs
src-tauri/src/utils/: mod.rs  nic_converter.rs
src/components/layout/: Header.tsx  Layout.tsx
src/components/print/: BulkPrintTemplate.tsx  PrintDialog.tsx  PrintTemplate.tsx
src/components/staff/: AddStaff.tsx  EditStaff.tsx  ImageCropper.tsx  SearchStaff.tsx  StaffDetails.tsx  StaffList.tsx
src/components/ui/: button.tsx  calendar.tsx  card.tsx  checkbox.tsx  dialog.tsx  index.ts  input.tsx  label.tsx  select.tsx  table.tsx  tabs.tsx
src/hooks/: useImageCrop.ts  usePrint.ts  useStaff.ts
src/lib/: constants.ts  dateUtils.ts  nicConverter.ts  tauri.ts  utils.ts
src/styles/: components.css  globals.css  print.css
src/types/: common.ts  staff.ts
