[package]
name = "forest-office-staff-manager"
version = "0.1.0"
description = "Staff Management System for Divisional Forest Office - Vavuniya"
authors = ["Forest Office Team"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
tauri = { version = "1.5.4", features = [ "system-tray", "shell-open", "window-start-dragging", "window-show", "window-maximize", "http-all", "window-unmaximize", "window-minimize", "path-all", "global-shortcut-all", "fs-all", "window-unminimize", "window-hide", "dialog-all", "window-close"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.30.0", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
base64 = "0.21"
tokio = { version = "1", features = ["full"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
